--- a/Xml-Json RW Utility/FunctionalPages/WritePage.xaml
+++ b/Xml-Json RW Utility/FunctionalPages/WritePage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="540" d:DesignWidth="960">
 
     <Page.Resources>
-        <Style TargetType="Button">
+        <Style TargetType="Button" x:Key="default">
             <Setter Property="FontSize" Value="16"/>
             <Setter Property="Template">
                 <Setter.Value>
@@ -45,7 +45,7 @@
         <Border Background="DarkGray" CornerRadius="15" Margin="10, 10, 5, 5">
             <StackPanel Orientation="Vertical" VerticalAlignment="Center">
                 <Label x:Name="labelWrite" Content="Чтение/Запись" FontSize="18" FontWeight="Bold" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,5,0,5"/>
-                <Button x:Name="buttonSelectFile" Click="ButtonSelectFile" Height="30" Width="125" Content="Выбрать файл"/>
+                <Button x:Name="buttonSelectFile" Style="{StaticResource default}" Click="ButtonSelectFile" Height="30" Width="125" Content="Выбрать файл"/>
                 <Label x:Name="labelFileName" Content="" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,0,5"/>
             </StackPanel>
         </Border>
@@ -66,33 +66,33 @@
                 <Border BorderThickness="0.5" BorderBrush="Gray" Margin="20,0,20,0"/>
 
                 <StackPanel Orientation="Horizontal" Margin="5,5,5,0" HorizontalAlignment="Center">
-                    <Label FontSize="16" Content="Добавить в тег" HorizontalAlignment="left" Margin="5,0,5,0"/>
+                    <Label x:Name="labelElementPostIn" FontSize="16" Content="Добавить в тег" HorizontalAlignment="left" Margin="5,0,5,0"/>
                     <ComboBox x:Name="comboBoxElementPostIn" SelectionChanged="ComboBoxes_SelectionChanged"  MinWidth="120" MaxWidth="150" MaxHeight="26" FontSize="16" Margin="5,0,5,0"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="25,0,5,5" HorizontalAlignment="Center">
-                    <Label FontSize="16" Content="элемент" Margin="5,0,5,0"/>
+                    <Label x:Name="labelElementPost" FontSize="16" Content="элемент" Margin="5,0,5,0"/>
                     <TextBox x:Name="textBoxElementPost" TextChanged="TextBox_TextChanged" MinWidth="80" MaxWidth="160" MaxHeight="26" FontSize="16" Margin="5,0,5,0"/>
                 </StackPanel>
 
                 <Border BorderThickness="0.5" BorderBrush="Gray" Margin="20,0,20,0"/>
 
                 <StackPanel Orientation="Horizontal" Margin="5,5,5,0" HorizontalAlignment="Center">
-                    <Label FontSize="16" Content="Удалить из тега" Margin="5,0,5,0"/>
+                    <Label x:Name="labelElementDeleteFrom" FontSize="16" Content="Удалить из тега" Margin="5,0,5,0"/>
                     <ComboBox x:Name="comboBoxElementDeleteFrom" SelectionChanged="ComboBoxElementDeleteFrom_SelectionChanged"  MinWidth="120" MaxWidth="150" MaxHeight="26" FontSize="16" Margin="5,0,5,0"/>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" Margin="25,0,5,5" HorizontalAlignment="Center">
-                    <Label FontSize="16" Content="элемент" Margin="5,0,5,0"/>
+                    <Label x:Name="labelElementDelete" FontSize="16" Content="элемент" Margin="5,0,5,0"/>
                     <ComboBox x:Name="comboBoxElementDelete" SelectionChanged="ComboBoxes_SelectionChanged"  MinWidth="120" MaxWidth="150" MaxHeight="26" FontSize="16" Margin="5,0,5,0"/>
                 </StackPanel>
 
                 <Border BorderThickness="0.5" BorderBrush="Gray" Margin="20,0,20,0"/>
-                
-                <Button x:Name="buttonAcceptChanges" IsEnabled="False" FontSize="16" Height="35" Width="190" Content="Применить изменения" Click="ButtonAcceptChanges" Margin="0,10,0,5"/>
+
+                <Button x:Name="buttonAcceptChanges" Style="{StaticResource default}" IsEnabled="False" FontSize="16" Height="35" Width="190" Content="Применить изменения" Click="ButtonAcceptChanges" Margin="0,10,0,5"/>
             </StackPanel>
         </Border>
 
-        <Button HorizontalAlignment="Left" Width="150" Click="ButtonBack" Background="White" FontSize="16" FontWeight="Bold" Content="Назад" Margin="10,5,5,10" Grid.Row="2"/>
-        <Button x:Name="buttonClear" IsEnabled="False" HorizontalAlignment="Right" Foreground="Firebrick" Width="150" Click="ButtonClear" Background="White" FontSize="16" FontWeight="Bold" Content="Сбросить" Margin="5,5,5,10" Grid.Row="2"/>
+        <Button x:Name="buttonBack" Style="{StaticResource default}" HorizontalAlignment="Left" Width="150" Click="ButtonBack" Background="White" FontSize="16" FontWeight="Bold" Content="Назад" Margin="10,5,5,10" Grid.Row="2"/>
+        <Button x:Name="buttonClear" Style="{StaticResource default}" IsEnabled="False" HorizontalAlignment="Right" Foreground="Firebrick" Width="150" Click="ButtonClear" Background="White" FontSize="16" FontWeight="Bold" Content="Сбросить" Margin="5,5,5,10" Grid.Row="2"/>
 
         <Border x:Name="borderFileInfo" Background="LightGray" BorderThickness="1" BorderBrush="DarkGray" CornerRadius="15" Margin="5,10,10,10" Grid.Column="1" Grid.RowSpan="3">
             <ListBox x:Name="listBoxItemsList" BorderThickness="1" Background="Transparent" Margin="15,15,15,15" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Visible"/>
