--- a/Xml-Json RW Utility/FunctionalWindows/EditWindow.xaml
+++ b/Xml-Json RW Utility/FunctionalWindows/EditWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="Xml_Json_RW_Utility.FunctionalWindows.TransferWindow"
+﻿<Window x:Class="Xml_Json_RW_Utility.FunctionalWindows.EditWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:Xml_Json_RW_Utility.FunctionalPages"
+        xmlns:local="clr-namespace:Xml_Json_RW_Utility.FunctionalWindows"
         mc:Ignorable="d"
-        Title="Окно перевода" MaxHeight="160" MaxWidth="360" MinHeight="160" MinWidth="360" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
-
+        Title="Окно редактирования" MaxHeight="160" MaxWidth="380" MinHeight="160" MinWidth="380" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen">
+    
     <Window.Resources>
         <Style TargetType="Button">
             <Setter Property="Template">
@@ -29,21 +29,23 @@
             </Setter>
         </Style>
     </Window.Resources>
-    
+
     <Grid Background="DarkGray">
         <Grid.RowDefinitions>
             <RowDefinition Height="50*" MinHeight="30" />
-            <RowDefinition Height="50*" MinHeight="30" MaxHeight="50"/>
+            <RowDefinition Height="50*" MinHeight="30" MaxHeight="60"/>
         </Grid.RowDefinitions>
 
         <StackPanel Orientation="Vertical" VerticalAlignment="Center" HorizontalAlignment="Center">
-            <Label x:Name="labelTypeTransfer" FontSize="16" FontWeight="Bold" Content="Выберите файл для перевода"/>
-            <Label x:Name="labelFileName" FontWeight="Bold" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center" Content=""/>
+            <Label FontSize="16" FontWeight="Bold" Margin="0,0,0,5">
+                <TextBlock>
+                    <Run>Изменение элемента</Run>
+                    <Run x:Name="labelElementName" Foreground="LightGray">element</Run>
+                </TextBlock>
+            </Label>
+            <TextBox x:Name="textBoxElementValue" Text="" MinWidth="80" MaxWidth="240" MaxHeight="26" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         </StackPanel>
 
-        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Grid.Row="1">
-            <Button x:Name="btnSelectFile" Background="LightGray" Height="30" Width="120" Click="ButtonSelectFile" FontSize="14" Content="Выбрать файл" Margin="0,0,10,0"/>
-            <Button x:Name="btnAccept" IsEnabled="False" Background="White" Height="30" Width="120" Click="ButtonConfirm" FontSize="14" Content="Подтвердить" Margin="10,0,0,0"/>
-        </StackPanel>
+        <Button x:Name="buttonSave" Background="White" Height="30" Width="100" FontSize="14" Content="Сохранить" Click="ButtonSave_Click" Grid.Row="1"/>
     </Grid>
 </Window>
