--- a/Xml-Json RW Utility/HomeWindow.xaml
+++ b/Xml-Json RW Utility/HomeWindow.xaml
@@ -63,11 +63,11 @@
         </Grid.RowDefinitions>
 
         <Image Panel.ZIndex="1" HorizontalAlignment="Left" Margin="5,0,0,0" VerticalAlignment="Center" Height="20" Width="20" Source="Resources\images\appImage.png"/>
-        <Border Panel.ZIndex="0" Background="Gray">
+        <Border Background="Gray">
             <Label x:Name="lbHome" Foreground="White" FontSize="14" FontWeight="Bold" Content="Xml-Json RW Utility" HorizontalAlignment="Center"/>
         </Border>
-        <Button Panel.ZIndex="1" Background="FireBrick" Foreground="White" BorderThickness="0" HorizontalAlignment="Right" Height="30" Width="30" FontSize="16" FontWeight="Bold" Click="Button_Click"/>
+        <Button x:Name="buttonExit" Background="FireBrick" Foreground="White" BorderThickness="0" HorizontalAlignment="Right" Height="30" Width="30" FontSize="16" FontWeight="Bold" Click="ButtonExit_Click"/>
 
-        <Frame Name="frmHome"  NavigationUIVisibility="Hidden" Grid.Row="1"/>
+        <Frame Name="frmHome" NavigationUIVisibility="Hidden" Grid.Row="1"/>
     </Grid>
 </Window>
