Add tests and minor changes

--- a/Xml-Json RW Utility/FunctionalPages/WriteReadPage.xaml
+++ b/Xml-Json RW Utility/FunctionalPages/WriteReadPage.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Xml_Json_RW_Utility.FunctionalPages.WritePage"
+﻿<Page x:Class="Xml_Json_RW_Utility.FunctionalPages.WriteReadPage"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
